toc customise - fix anchor being overlapped by navi 3

--- a/assets/css/toc.css
+++ b/assets/css/toc.css
@@ -64,7 +64,7 @@ a.toc-link {
     top: 70px;
     min-width: 260px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif, Microsoft JhengHei;
     font-size: 1.6rem;
     line-height: 1.6em;
     padding: 0 0.8em;
@@ -73,6 +73,7 @@ a.toc-link {
 body {
     overflow: visible;
 }
+
 .post-full-content {
     display: grid;
     grid-template-columns: 1fr 0.2fr;
@@ -84,6 +85,16 @@ ol.toc-list {
     margin: 0;
 }
 
+/* Adjust content wrapper */
+.post-content {
+    display: block;
+}
+
+.post-content h2,
+.post-content h3 {
+    outline: none;
+}
+
 /* Offset headings from fixed header */
 .post-content h2::before,
 .post-content h3::before {
@@ -92,11 +103,6 @@ ol.toc-list {
     height: 84px;
     margin-top: -84px;
     visibility: hidden;
-}
-
-/* Adjust content wrapper */
-.post-content {
-    display: block;
 }
 
 .post-full-content pre {
